--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                   text-decoration: none;
                 }
 
-                .wrapper {
+                .wrallet {
                   width: 100%;
                   min-height: 640px;
                   background-size: cover;
@@ -616,14 +616,14 @@
                 /*@Media*/
 
                 @media only screen and (width: 1024px) {
-                  .wrapper {
+                  .wrallet {
                     background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg);
                     background-size: cover;
                   }
                 }
 
                 @media only screen and (width: 768px) {
-                  .wrapper {
+                  .wrallet {
                     min-height: 800px;
                     background: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg)
                       no-repealt bottom center fixed !important;
@@ -641,7 +641,7 @@
                 }
 
                 @media (max-width: 480px) {
-                  .wrapper {
+                  .wrallet {
                     background-image: url(https://raw.githubusercontent.com/kasuncfdo/Maintain-page-of-dls/main/homehero-mobile.jpg);
                     background-size: cover;
                   }
@@ -670,7 +670,7 @@
                 }
               </style>
 
-              <div class="wrapper">
+              <div class="wrallet">
                 <!--figure>
                             <img src="crest.png" alt="De La Salle College">
                         </figure-->
