--- a/index.html
+++ b/index.html
@@ -696,10 +696,7 @@
                 <source src="vid/dlscrest.mp4" type="video/mp4" />
               </video>
               <div class="carousel-caption slider-con">
-                <p style="font-family: 'Times New Roman', Times, serif", font-size: 24px;>
-                 <strong> OVER 116TH PROUD ANNIVERSARY WITH
-                  <span> DE LA SALLE COLLEGE </strong></span>
-                </p>
+                <h1 style="height: 0px; text-align: left;"><strong style="background-color: white; box-sizing: border-box; color: white; text-align: center;"><span style="font-family: Bree Serif; font-size: medium;">OVER 116TH PROUD ANNIVERSARY WITH&nbsp;<span style="box-sizing: border-box;">DE LA SALLE COLLEGE</span></span></strong><br /></h1>
 
                 <img
                   height="70px"
