--- a/index.html
+++ b/index.html
@@ -696,7 +696,8 @@
                 <source src="vid/dlscrest.mp4" type="video/mp4" />
               </video>
               <div class="carousel-caption slider-con">
-                <h1 style="height: 0px; text-align: left;"><strong style="background-color: white; box-sizing: border-box; color: white; text-align: center;"><span style="font-family: Bree Serif; font-size: medium;">OVER 116TH PROUD ANNIVERSARY WITH&nbsp;<span style="box-sizing: border-box;">DE LA SALLE COLLEGE</span></span></strong><br /></h1>
+                <h1><strong >OVER 116TH PROUD ANNIVERSARY WITH <br />
+                    DE LA SALLE COLLEGE</h1>
 
                 <img
                   height="70px"
