--- a/index.html
+++ b/index.html
@@ -696,8 +696,8 @@
                 <source src="vid/dlscrest.mp4" type="video/mp4" />
               </video>
               <div class="carousel-caption slider-con">
-                <h1><strong >OVER 116TH PROUD ANNIVERSARY WITH <br />
-                    DE LA SALLE COLLEGE</h1>
+                <p><strong >OVER 116TH PROUD ANNIVERSARY WITH <br />
+                    DE LA SALLE COLLEGE</p>
 
                 <img
                   height="70px"
