--- a/index.html
+++ b/index.html
@@ -146,6 +146,39 @@
     ❆
   </div>
 </div-->
+<style>
+  .css_blink {
+	-webkit-animation-name: blinker;
+	-webkit-animation-duration: 2s;
+	-webkit-animation-timing-function: linear;
+	-webkit-animation-iteration-count: infinite;
+
+	-moz-animation-name: blinker;
+	-moz-animation-duration: 2s;
+	-moz-animation-timing-function: linear;
+	-moz-animation-iteration-count: infinite;
+
+	animation-name: blinker;
+	animation-duration: 2s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+}
+
+@-moz-keyframes blinker {  
+	50% { opacity: 0.1; }
+	100% { opacity: 1.0; }
+}
+
+@-webkit-keyframes blinker {  
+	50% { opacity: 0.1; }
+	100% { opacity: 1.0; }
+}
+
+@keyframes blinker {  
+	50% { opacity: 0.1; }
+	100% { opacity: 1.0; }
+}
+</style>
   </head>
 
   <body id="home">
