--- a/index.html
+++ b/index.html
@@ -966,14 +966,16 @@
         <div class="widgets-container">
           <!-- Edit this section for important announcements.-->
           <div class="alert alert-warning text-center">
+          
+<li class="list-group-item">
+		<span class="css_blink ">
             Notice to candidates who wish to apply for the
             <a
               class="alert-link"
               href="https://docs.google.com/forms/d/e/1FAIpQLSeVjUHHK9cG8K7JgCsnb3bAFtUmUEf4dgFD6Ak9MBxtp4IyYA/closedform"
               >GCE Advanced Level academic year 2021/2023 based on the results
               of the GCE (O/L) Examination 2020.</a
-            >
-          </div>
+            ></li>
 
           <!-- Announcements -->
           <div class="col-sm-4" id="announcements">
