--- a/index.html
+++ b/index.html
@@ -976,6 +976,8 @@
               >GCE Advanced Level academic year 2021/2023 based on the results
               of the GCE (O/L) Examination 2020.</a
             ></li>
+          </div>
+        </div>
 
           <!-- Announcements -->
           <div class="col-sm-4" id="announcements">
