--- a/index.html
+++ b/index.html
@@ -978,6 +978,8 @@
             ></li>
           </div>
         </div>
+      </div>
+    </div>
 
           <!-- Announcements -->
           <div class="col-sm-4" id="announcements">
