--- a/index.html
+++ b/index.html
@@ -975,6 +975,7 @@
       of the GCE (O/L) Examination 2020.</a>   		
 			   <img src="img/new.gif" alt="new.gif"> 
  	</li>
+          </div>
 
 
 
