--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
 		<a class="alert-link" href="https://docs.google.com/forms/d/e/1FAIpQLSeVjUHHK9cG8K7JgCsnb3bAFtUmUEf4dgFD6Ak9MBxtp4IyYA/closedform" target="_blank"  > 	
 			<font color="blue"> Notice to candidates who wish to apply for the</font>   </span> GCE Advanced Level academic year 2021/2023 based on the results
       of the GCE (O/L) Examination 2020.</a>   		
-			   <img src="img/new.gif" alt="new.gif"> 
+			   <img src="gif/new-gif.gif" alt="new.gif"> 
  	</li>
           </div>
         </div>
