--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
 		<a class="alert-link" href="https://docs.google.com/forms/d/e/1FAIpQLSeVjUHHK9cG8K7JgCsnb3bAFtUmUEf4dgFD6Ak9MBxtp4IyYA/closedform" target="_blank"  > 	
 			<font color="blue"> Notice to candidates who wish to apply for the</font>   </span> GCE Advanced Level academic year 2021/2023 based on the results
       of the GCE (O/L) Examination 2020.</a>   		
-			   <img src="gif/new-gif.gif" alt="new.gif" width="10px" height="10px"> 
+			   <img src="gif/new-gif.gif" alt="new.gif" width="auto" height="20px"> 
           </div>
 
 
