--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 	100% { opacity: 1.0; }
 }
 </style>
+
   </head>
 
   <body id="home">
@@ -969,7 +970,7 @@
 		<span class="css_blink ">	
 					
 		<a class="alert-link" href="https://docs.google.com/forms/d/e/1FAIpQLSeVjUHHK9cG8K7JgCsnb3bAFtUmUEf4dgFD6Ak9MBxtp4IyYA/closedform" target="_blank"  > 	
-			<font color="blue"> Notice to candidates who wish to apply for the</font>   </span> GCE Advanced Level academic year 2021/2023 based on the results
+			 Notice to candidates who wish to apply for the</span> GCE Advanced Level academic year 2021/2023 based on the results
       of the GCE (O/L) Examination 2020.</a>   		
 			   <img src="gif/new-gif.gif" alt="new.gif" width="auto" height="20px"> 
           </div>
@@ -1117,6 +1118,7 @@
               </div>
             </div>
           </div>
+        </div>
           <div class="col-sm-4" id="news">
             <div class="news-content">
               <div class="widgets-title"><h2>News</h2></div>
