--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
       of the GCE (O/L) Examination 2020.</a>   		
 			   <img src="gif/new-gif.gif" alt="new.gif" width="auto" height="20px"> 
           </div>
-
+        </div>
 
           <!-- Announcements -->
           <div class="col-sm-4" id="announcements">
