--- a/index.html
+++ b/index.html
@@ -146,40 +146,6 @@
     ❆
   </div>
 </div-->
-<style>
-  .css_blink {
-	-webkit-animation-name: blinker;
-	-webkit-animation-duration: 2s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-
-	-moz-animation-name: blinker;
-	-moz-animation-duration: 2s;
-	-moz-animation-timing-function: linear;
-	-moz-animation-iteration-count: infinite;
-
-	animation-name: blinker;
-	animation-duration: 2s;
-	animation-timing-function: linear;
-	animation-iteration-count: infinite;
-}
-
-@-moz-keyframes blinker {  
-	50% { opacity: 0.1; }
-	100% { opacity: 1.0; }
-}
-
-@-webkit-keyframes blinker {  
-	50% { opacity: 0.1; }
-	100% { opacity: 1.0; }
-}
-
-@keyframes blinker {  
-	50% { opacity: 0.1; }
-	100% { opacity: 1.0; }
-}
-</style>
-
   </head>
 
   <body id="home">
@@ -967,13 +933,14 @@
         <div class="widgets-container">
           <!-- Edit this section for important announcements.-->
           <div class="alert alert-warning text-center">
-					
-		<a class="alert-link" href="https://docs.google.com/forms/d/e/1FAIpQLSeVjUHHK9cG8K7JgCsnb3bAFtUmUEf4dgFD6Ak9MBxtp4IyYA/closedform" target="_blank"  > 	
-			 Notice to candidates who wish to apply for the</span> GCE Advanced Level academic year 2021/2023 based on the results
-      of the GCE (O/L) Examination 2020.</a>   		
-			   <img src="gif/new-gif.gif" alt="new.gif" width="auto" height="20px"> 
+            Notice to candidates who wish to apply for the
+            <a
+              class="alert-link"
+              href="https://docs.google.com/forms/d/e/1FAIpQLSeVjUHHK9cG8K7JgCsnb3bAFtUmUEf4dgFD6Ak9MBxtp4IyYA/closedform"
+              >GCE Advanced Level academic year 2021/2023 based on the results
+              of the GCE (O/L) Examination 2020.</a
+            >
           </div>
-
 
           <!-- Announcements -->
           <div class="col-sm-4" id="announcements">
@@ -1117,7 +1084,6 @@
               </div>
             </div>
           </div>
-        </div>
           <div class="col-sm-4" id="news">
             <div class="news-content">
               <div class="widgets-title"><h2>News</h2></div>
