--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                 }
 
                 @media screen and (min-width: 1900px) {
-                  .wrapper {
+                  .wrallet {
                     min-height: 840px;
                   }
                 }
