--- a/index.html
+++ b/index.html
@@ -575,6 +575,164 @@
     <script type="text/javascript">jssor_1_slider_init();
     </script>  -->
     <!-- #endregion Jssor Slider End -->
+    <style>
+      * {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+      }
+
+      *:before,
+      *:after {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+      }
+
+      html,
+      body {
+        padding: 0;
+        margin: 0;
+      }
+
+      a {
+        display: inline-block;
+        outline: 0;
+        text-decoration: none;
+      }
+
+      .wrallet {
+        width: 100%;
+        min-height: 640px;
+        background-size: cover;
+        margin-top: 0;
+        padding-top: 0;
+        background: url(bg-main.jpg) no-repeat center;
+        background-size: cover;
+        height: 100vh;
+        position: relative;
+      }
+
+      figure {
+        padding: 40px 0 0 0;
+        text-align: right;
+        margin: 0;
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
+
+      figure img {
+        max-width: 300px;
+      }
+
+      .content {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        height: 100vh;
+      }
+
+      .box {
+        background: rgba(255, 255, 255, 0.87);
+        border-radius: 10px;
+        padding: 40px;
+        max-width: 750px;
+        min-width: 750px;
+        margin: auto;
+        text-align: center;
+      }
+
+      .box .inner-content {
+        max-width: 600px;
+        margin: auto;
+      }
+
+      h1 {
+        margin: 0 0 30px 0;
+        color: #0a5bcd;
+        letter-spacing: 0.37px;
+      }
+
+      @media screen and (min-width: 1900px) {
+        .wrallet {
+          min-height: 840px;
+        }
+      }
+
+      /*@Media*/
+
+      @media only screen and (width: 1024px) {
+        .wrallet {
+          background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg);
+          background-size: cover;
+        }
+      }
+
+      @media only screen and (width: 768px) {
+        .wrallet {
+          min-height: 800px;
+          background: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg)
+            no-repealt bottom center fixed !important;
+        }
+      }
+
+      @media (max-width: 768px) {
+        .box {
+          min-width: auto;
+          margin: auto 20px;
+        }
+      }
+
+      @media (max-width: 680px) {
+      }
+
+      @media (max-width: 480px) {
+        .wrallet {
+          background-image: url(https://raw.githubusercontent.com/kasuncfdo/Maintain-page-of-dls/main/homehero-mobile.jpg);
+          background-size: cover;
+        }
+
+        figure {
+          padding: 15px 0 0 0;
+        }
+
+        figure img {
+          max-width: 200px;
+        }
+
+        .box {
+          padding: 25px;
+        }
+
+        h1 {
+          font-size: 20px;
+        }
+
+      }
+    </style>
+
+    <div class="wrallet">
+      <!--figure>
+                  <img src="crest.png" alt="De La Salle College">
+              </figure-->
+      <div class="content">
+        <div class="box">
+          <h1>
+            Welcome to De La Salle College,Colombo - Indivisa Manent
+          </h1>
+          <div class="inner-content">
+              <div style="text-align: center;"><span style="color: #333333; font-family: Poppins;"><span style="background-color: rgba(255, 255, 255, 0);">De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".</span></span></div><div style="text-align: center;"><span style="color: #333333; font-family: Poppins;"><span style="background-color: rgba(255, 255, 255, 0);"><br /></span></span></div><div style="text-align: center;"><span style="color: #333333; font-family: Poppins;"><span style="background-color: rgba(255, 255, 255, 0);">De La Salle College was opened on 01 st February 1905 with 22 boys on roll. The object of this School is to give the boys of the Mutwal mission an opportunity to receive an elementary English Education. It is the first “English School” to be set up in this part of Colombo North.</span></span></div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Announcements, Events, News -->
     <div class="widgets-wrapper">
