--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             <div class="carousel-inner">
                 <div class="item slider1 active">
                     <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
-                        <source src="vid/dlscrest.mp4" type="video/mp4">
+                        <source src="vid/wave flag animation1_1.mp4" type="video/mp4">
                     </video>
                     <div class="carousel-caption slider-con">
                         <h2>OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></h2>
