--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
                     <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
                         <source src="vid/wave flag animation1_1.mp4" type="video/mp4">
                     </video>
-                    <div class="carousel-caption slider-con">
+                    <!--div class="carousel-caption slider-con">
                         <h2>OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></h2>
          
                         <img height="70px" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
-                <div></div>
+                <div></div-->
                         <p>~ INDIVISA MANENT ~</p>
                         
                     </div>
