--- a/index.html
+++ b/index.html
@@ -351,11 +351,11 @@
                         <h2>OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></h2>
          
                         <img height="70px" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
-                <div></div-->
+                <div></div>
                         <p>~ INDIVISA MANENT ~</p>
                         
                     </div>
-                </div>
+                </div-->
             </div>
         </div>
     </section>
