--- a/index.html
+++ b/index.html
@@ -1267,7 +1267,7 @@ $(document).on('click', function (e) {
 
 <!--
 /********************************
-**Contributors for this Website**
+**Contributors for this site project**
 *********************************
 
 The website has been designed and developed from scratch by the Students of De La Salle College
@@ -1281,6 +1281,11 @@ Kasun Chanuka Fernando (chanukaf7@gmail.com)
 --Web Graphics Mockup & Animations--
 Kasun Chanuka Fernando (chanukaf7@gmail.com)
 
+--Development Team--
+Mast.Kasun Chanuka Fernando
+Mr.Antonio Rennvick
+Mrs.Manori Wijayanayaka (Teacher in-charge ICT)
+..................
 
 --Special thanks for Support--
 Thisum Radith
