--- a/index.html
+++ b/index.html
@@ -1284,7 +1284,7 @@ Kasun Chanuka Fernando (chanukaf7@gmail.com)
 --Development Team--
 Mast.Kasun Chanuka Fernando
 Mr.Antonio Rennvick
-Mrs.Manori Wijayanayaka (Teacher in-charge ICT)
+Mrs.Manori Wijayanayake (Teacher in-charge ICT)
 ..................
 
 --Special thanks for Support--
