--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,7 @@
             <div class="col-lg-6">
                 <div class="section-title">
                     <h2>Get In Touch</h2>
-                    <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites</p>
+                    <p></p>
                 </div>
             </div>
         </div>
@@ -1171,10 +1171,10 @@
                 </div>
                 <div class="social-share nav">
                     <a class="dribbble" href="#">
-                        <i class="fab fa-dribbble"></i>
+                        <i class="fab fa-twitter"></i>
                     </a>
-                    <a class="behance" href="#">
-                        <i class="fab fa-behance"></i>
+                    <a class="behance" href="https://www.facebook.com/DeLaSalleCollegeColombo">
+                        <i class="fab fa-facebook"></i>
                     </a>
                     <a class="linkedin" href="#">
                         <i class="fab fa-linkedin-in"></i>
