--- a/blog1.html
+++ b/blog1.html
@@ -53,7 +53,7 @@
 		</script>
 </head>
 <style>
-  
+
   @-webkit-keyframes border-transform {
   0%,100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; }
   14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; }
@@ -577,10 +577,6 @@
                 <div class="contents-wrapper">
                     <!-- Contents starts here -->
                         <div class="card shadow1">
-                          <div class="progress-wrap">
-                            <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
-                              <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
-                            </svg>
                             <h1>About us</h1>
                 <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
@@ -669,6 +665,11 @@
                             </div>
                     </div>
                 </div>
+                </div>
+                <div class="progress-wrap">
+                  <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+                    <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+                  </svg>
                 </div>
 </body>
                 </section>
