--- a/blog1.html
+++ b/blog1.html
@@ -635,7 +635,7 @@ card
 
             </style>
             <body>
-              <div class="container">
+              <!--div class="container">
                 <div class="card">
                   <div class="card-header">
                     <div class="avatar">
@@ -661,7 +661,7 @@ card
                     </div>
                   </div>
                 </div>
-              </div>
+              </div-->
             </body>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
               <script>
