--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link href="css/snowflakes.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <!-- Start WOWSlider HEAD section --> <!-- add to the <head> of your page -->
+	  <link rel="stylesheet" type="text/css" href="College Assests/main-infoslider/engine1/style.css" />
+	  <script type="text/javascript" src="College Assests/main-infoslider/engine1/jquery.js"></script>
+	  <!-- End WOWSlider HEAD section -->
+
     <!--Site Meta-->
 
     <meta property="og:locale" content="en_GB" />
@@ -1107,6 +1112,21 @@
                             </div></div>
                             
         </section>
+        <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
+	<div id="wowslider-container1">
+    <div class="ws_images"><ul>
+      <li><a href="#"><img src="College Assests/main-infoslider/data1/images/1.png" alt="slideshow html code" title="Our Vision" id="wows1_0"/></a></li>
+    </ul></div>
+    <div class="ws_bullets"><div>
+      <a href="College Assests/main-infoslider/data1/images/1.png" title="Our Vision"><span><img src="College Assests/main-infoslider/data1/images/1.png" alt="Our Vision"/>1</span></a>
+      <a href="College Assests/main-infoslider/data1/images/2.png" title="Our Mission"><span>2</span></a>
+    </div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="#">image carousel</a> by WOWSlider.com v9.0</div>
+    <div class="ws_shadow"></div>
+    </div>	
+    <script type="text/javascript" src="College Assests/main-infoslider/engine1/wowslider.js"></script>
+    <script type="text/javascript" src="College Assests/main-infoslider/engine1/script.js"></script>
+    <!-- End WOWSlider.com BODY section -->
+  
 
     <!-- Get in Touch -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
