--- a/College Assests/main-infoslider/index.html
+++ b/College Assests/main-infoslider/index.html
@@ -16,7 +16,7 @@
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
-		<li><a href="#"><img src="data1/images/1.png" alt="slideshow html code" title="Our Vision" id="wows1_0"/></a></li>
+		<li><a href="http://wowslider.net"><img src="data1/images/1.png" alt="bootstrap carousel example" title="Our Vision" id="wows1_0"/></a></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
 		<a href="data1/images/1.png" title="Our Vision"><span><img src="data1/tooltips/1.png" alt="Our Vision"/>1</span></a>
