--- a/College Assests/main-infoslider/index.html
+++ b/College Assests/main-infoslider/index.html
@@ -16,10 +16,10 @@
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
-		<li><a href="http://wowslider.net"><img src="data1/images/1.png" alt="css image gallery" title="Our Vision" id="wows1_0"/></a></li>
+		<li><a href="http://wowslider.net"><img src="data1/images/1.png" alt="image carousel" title="Our Vision" id="wows1_0"/></a></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="data1/images/1.png" title="Our Vision"><span><img src="data1/tooltips/1.png" alt="Our Vision"/>1</span></a>
+		<a href="data1/images/1.png" title="Our Vision"><span>1</span></a>
 		<a href="data1/images/2.png" title="Our Mission"><span>2</span></a>
 	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">image carousel</a> by WOWSlider.com v9.0</div>
 	<div class="ws_shadow"></div>
