--- a/index.html
+++ b/index.html
@@ -352,15 +352,15 @@
                     <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
                         <source src="vid/dlscrest.mp4" type="video/mp4">
                     </video>
-                    <!--div class="carousel-caption slider-con">
-                        <h2>OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></h2>
+                    <div class="carousel-caption slider-con">
+                        <p>OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></p>
          
                         <img height="70px" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
                 <div></div>
                         <p>~ INDIVISA MANENT ~</p>
                         
                     </div>
-                </div-->
+                </div>
             </div>
         </div>
     </section>
