--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                         <source src="vid/dlscrest.mp4" type="video/mp4">
                     </video>
                     <div class="carousel-caption slider-con">
-                        <h2>OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></h2>
+                        <p>OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></p>
          
                         <img height="70px" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
                 <div></div>
