--- a/index.html
+++ b/index.html
@@ -353,6 +353,9 @@
                         <source src="vid/dlscrest.mp4" type="video/mp4">
                     </video>
                     <div class="carousel-caption slider-con">
+                    </div>
+                    <br>
+                    <br>
                         <p>OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></p>
          
                         <img height="70px" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
