--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     <div class="carousel-caption slider-con">
                     </br>
                     </br>
-                        <p style="font-size: 10px;">OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></p>
+                        <p style="font-size: 10px;" style="padding-top: 5.5px;">OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></p>
          
                         <img height="70px" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
                 <div></div>
