--- a/index.html
+++ b/index.html
@@ -355,7 +355,12 @@
                     <div class="carousel-caption slider-con">
                     </br>
                     </br>
-                        <p style="font-size: 10px;" style="margin: 10px;">OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></p>
+                    <style>
+                      .parra {
+                        margin: 10px;
+                      }
+                    </style>
+                        <b class="parra" style="font-size: 10px;" style="margin: 10px;">OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></b>
          
                         <img height="70px" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
                 <div></div>
