--- a/index.html
+++ b/index.html
@@ -355,7 +355,10 @@
                     <div class="carousel-caption slider-con">
                     </br>
                     </br>
-                  
+                  <style>
+                    .parra{
+                      margin-top: 10px;
+                    }
                     </style>
                         <b class="parra" style="font-size: 10px;" style="margin: 10px;">OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></b>
          
