--- a/index.html
+++ b/index.html
@@ -358,6 +358,8 @@
                   <style>
                     .parra{
                       margin-top: 10px;
+                      font-family: Arial, Helvetica, sans-serif
+                      ;
                     }
                     </style>
                     <img height="70px" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
