--- a/index.html
+++ b/index.html
@@ -380,23 +380,23 @@
     <div class="carousel-wrapper">
         <div class="carousel" style="margin: 0 auto">
             <div class="carousel-items">
-                <img height="400px" src="img/slider/slider1.jpg" alt="slider1">
+                <img height="auto" src="img/slider/slider1.jpg" alt="slider1">
                 <div></div>
             </div>
             <div class="carousel-items">
-                <img height="400px" src="img/slider/slider2.jpg" alt="slider2">
+                <img height="auto" src="img/slider/slider2.jpg" alt="slider2">
                 <div></div>
             </div>
             <div class="carousel-items">
-                <img height="400px" src="img/slider/slider3.jpg" alt="slider3">
+                <img height="auto" src="img/slider/slider3.jpg" alt="slider3">
                 <div></div>
             </div>
             <div class="carousel-items">
-                <img height="400px" src="img/slider/slider4.jpg" alt="slider4">
+                <img height="auto" src="img/slider/slider4.jpg" alt="slider4">
                 <div></div>
             </div>
             <div class="carousel-items">
-                <img height="400px" src="img/slider/slider5.jpg" alt="slider5">
+                <img height="auto" src="img/slider/slider5.jpg" alt="slider5">
                 <div></div>
             </div>
         </div>
