--- a/index.html
+++ b/index.html
@@ -380,15 +380,15 @@
     <div class="carousel-wrapper">
         <div class="carousel" style="margin: 0 auto">
             <div class="carousel-items">
-                <img height="auto" src="img/slider/slider1.jpg" alt="slider1">
+                <img height="auto" src="img/slider/slider6.png" alt="slider1">
                 <div></div>
             </div>
             <div class="carousel-items">
-                <img height="auto" src="img/slider/slider2.jpg" alt="slider2">
+                <img height="auto" src="img/slider/slider7.png" alt="slider2">
                 <div></div>
             </div>
             <div class="carousel-items">
-                <img height="auto" src="img/slider/slider3.jpg" alt="slider3">
+                <img height="auto" width="auto" src="img/slider/slider3.jpg" alt="slider3">
                 <div></div>
             </div>
             <div class="carousel-items">
