--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
     <!-- carousel -->
     <div class="carousel-wrapper">
-        <div class="carousel" style="margin: 0 auto">
+        <div class="carousel">
             <div class="carousel-items">
                 <img height="auto" width="auto" src="img/slider/slider1.jpg" alt="slider1">
                 <div></div>
