--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     <script type="text/javascript" src="College Assests/main-infoslider/engine1/wowslider.js"></script>
     <script type="text/javascript" src="College Assests/main-infoslider/engine1/script.js"></script>
     <!-- End WOWSlider.com BODY section -->
-    
+</div>
     <!-- Source: https://www.jssor.com/demos/image-slider.slider/=edit
     <script src="js/jssor.slider-28.1.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
