--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@
                             
         </section>
         <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
-	<div id="wowslider-container1">
+	<!--div id="wowslider-container1">
     <div class="ws_images"><ul>
       <li><a href="#"><img src="College Assests/main-infoslider/data1/images/1.png" alt="slideshow html code" title="Our Vision" id="wows1_0"/></a></li>
     </ul></div>
