--- a/index.html
+++ b/index.html
@@ -353,14 +353,14 @@
                         <source src="vid/dlscrest.mp4" type="video/mp4">
                     </video>
                     <div class="carousel-caption slider-con">
-                      <img class="responsive-img" height="auto" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
+                      <img class="responsive-img" height="550px" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
 
                     </br>
                     </br>
                   <style>
                     .parra{
                       margin-top: 10px;
-                      font-family: Arial, Helvetica, sans-serif
+                      font-family:Georgia, 'Times New Roman', Times, serif
                       ;
                     }
                     </style>
@@ -377,21 +377,31 @@
     </section>
 
     <!-- carousel -->
-    <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
-	<div id="wowslider-container1">
-    <div class="ws_images"><ul>
-      <li><a href="#"><img src="College Assests/main-infoslider/data1/images/1.png" alt="slideshow html code" title="Our Vision" id="wows1_0"/></a></li>
-    </ul></div>
-    <div class="ws_bullets"><div>
-      <a href="College Assests/main-infoslider/data1/images/1.png" title="Our Vision"><span><img src="College Assests/main-infoslider/data1/images/1.png" alt="Our Vision"/>1</span></a>
-      <a href="College Assests/main-infoslider/data1/images/2.png" title="Our Mission"><span>2</span></a>
-    </div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="#">image carousel</a> by WOWSlider.com v9.0</div>
-    <div class="ws_shadow"></div>
-    </div>	
-    <script type="text/javascript" src="College Assests/main-infoslider/engine1/wowslider.js"></script>
-    <script type="text/javascript" src="College Assests/main-infoslider/engine1/script.js"></script>
-    <!-- End WOWSlider.com BODY section -->
-</div>
+    <div class="carousel-wrapper">
+        <div class="carousel" style="margin: 0 auto">
+            <div class="carousel-items">
+                <img height="400px" src="img/slider/slider1.jpg" alt="slider1">
+                <div></div>
+            </div>
+            <div class="carousel-items">
+                <img height="400px" src="img/slider/slider2.jpg" alt="slider2">
+                <div></div>
+            </div>
+            <div class="carousel-items">
+                <img height="400px" src="img/slider/slider3.jpg" alt="slider3">
+                <div></div>
+            </div>
+            <div class="carousel-items">
+                <img height="400px" src="img/slider/slider4.jpg" alt="slider4">
+                <div></div>
+            </div>
+            <div class="carousel-items">
+                <img height="400px" src="img/slider/slider5.jpg" alt="slider5">
+                <div></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Source: https://www.jssor.com/demos/image-slider.slider/=edit
     <script src="js/jssor.slider-28.1.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -1114,7 +1124,7 @@
                             
         </section>
         <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
-	<!--div id="wowslider-container1">
+	<div id="wowslider-container1">
     <div class="ws_images"><ul>
       <li><a href="#"><img src="College Assests/main-infoslider/data1/images/1.png" alt="slideshow html code" title="Our Vision" id="wows1_0"/></a></li>
     </ul></div>
