--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="css/scroll.css" rel="stylesheet" />
     <link href="css/snowflakes.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/slick.css"
 
     <!-- Start WOWSlider HEAD section --> <!-- add to the <head> of your page -->
 	  <link rel="stylesheet" type="text/css" href="College Assests/main-infoslider/engine1/style.css" />
