--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                         <source src="vid/dlscrest.mp4" type="video/mp4">
                     </video>
                     <div class="carousel-caption slider-con">
-                      <img class="responsive-img" height="550px" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
+                      <img class="responsive-img" height="auto" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
 
                     </br>
                     </br>
