--- a/obu.html
+++ b/obu.html
@@ -18,17 +18,8 @@
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <!--style>
-    
-ul li a {
-    text-decoration: none;
-    position: relative;
-    padding: 15px 10px;
-    display: block;
-}
-ul li a + a {
-    margin-left: 16px;
-}
+    <style>
+
 .loader_bg{
     position: fixed;
     z-index: 999999;
@@ -1020,14 +1011,14 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
     height: 100%;
 }
         </style>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script>
-            setTimeout(function(){
-                $('.loader_bg').fadeToggle();
-            }, 1500);
-        </script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        setTimeout(function(){
+            $('.loader_bg').fadeToggle();
+        }, 1500);
+    </script>
 <!------ Include the above in your HEAD tag ---------->
 
 <!-- Reference: http://avexdesigns.com/responsive-youtube-embed/ -->
