--- a/obu.html
+++ b/obu.html
@@ -38,7 +38,7 @@
 }
 .loader:before, .loader:after{
     content: '';
-    border: 1em solid #120a83;
+    border: 1em solid #010997;
     border-radius: 50%;
     width: inherit;
     height: inherit;
