--- a/obu.html
+++ b/obu.html
@@ -65,7 +65,18 @@
     }
 }
 
-
+nav {
+    float: right;
+    line-height: 100px;
+}
+nav a {
+    text-decoration: none;
+    font-family: bignoodletitling;
+    letter-spacing: 4px;
+    font-size: 20px;
+    margin: 0 10px;
+    color: #fff;
+}
 
 
 *{
