--- a/obu.html
+++ b/obu.html
@@ -70,7 +70,7 @@ nav {
     line-height: auto;
 }
 nav a {
-    text-decoration: none;
+    text-decoration: wavy;
     font-family: bignoodletitling;
     color: #fff;
 }
