--- a/obu.html
+++ b/obu.html
@@ -71,7 +71,7 @@ nav {
 }
 nav a {
     text-decoration: wavy;
-    font-family: bignoodletitling;
+    font-family: Goudy Old Style;
     color: #fff;
 }
 
