--- a/obu.html
+++ b/obu.html
@@ -71,8 +71,10 @@ nav {
 }
 nav a {
     text-decoration: wavy;
-    font-family: Goudy Old Style;
+    @media (max-width: 480px) {
+    font-family: Goudy Old Style; 
     color: #fff;
+}
 }
 
     </style>
