--- a/obu.html
+++ b/obu.html
@@ -66,15 +66,13 @@
 }
 
 nav {
-    float: none;
+    float: inline-start;
     line-height: auto;
 }
 nav a {
     text-decoration: wavy;
-    @media (max-width: 480px) {
-    font-family: Goudy Old Style; 
+    font-family: Goudy Old Style;
     color: #fff;
-}
 }
 
     </style>
