--- a/obu.html
+++ b/obu.html
@@ -114,6 +114,14 @@ nav a {
     font-family: Goudy Old Style;
     color: #fff;
 }
+
+@font-face {
+  font-family: 'unicons';
+  src: url('unicons.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 @-webkit-keyframes border-transform {
   0%,100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; }
   14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; }
