--- a/obu.html
+++ b/obu.html
@@ -117,7 +117,7 @@ nav a {
 
 @font-face {
   font-family: 'unicons';
-  src: url('unicons.ttf') format('truetype');
+  src: url('fonts/unicons.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
