--- a/obu.html
+++ b/obu.html
@@ -60,6 +60,8 @@
 
     <style>
 
+/***PRELOADER***/        
+
 .loader_bg{
     position: fixed;
     z-index: 999999;
@@ -104,6 +106,7 @@
         opacity: 0;
     }
 }
+/*** SITE NAVIGATION***/
 
 nav {
     float: inline-start;
@@ -114,6 +117,8 @@ nav a {
     font-family: Goudy Old Style;
     color: #fff;
 }
+
+/*** BACK TO TOP BUTTON WITH PROGRESS***/
 
 @font-face {
   font-family: 'unicons';
@@ -163,7 +168,7 @@ nav a {
   text-align: center;
   line-height: 50px;
   font-size: 26px;
-  color: #ecedf3;
+  color: #020a35;
   left: 0;
   top: 0;
   height: 50px;
@@ -210,7 +215,7 @@ nav a {
 }
 
 .progress-wrap svg.progress-circle path {
-  stroke: #ecedf3;
+  stroke: #17298b;
   stroke-width: 4;
   box-sizing: border-box;
   -webkit-transition: all 200ms linear;
