--- a/view-events.html
+++ b/view-events.html
@@ -57,6 +57,9 @@
 </head>
 
 <body>
+  <div class="loader_bg">
+    <div class="loader"></div>
+</div>
     <!-- Start Your Body Code From here -->
     <div class="wrapper">
         <!-- header starts here -->
@@ -1551,6 +1554,12 @@ all and (min-device-pixel-ratio:1.5) {
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/434d359724.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        setTimeout(function(){
+            $('.loader_bg').fadeToggle();
+        }, 1500);
+    </script>
     <script>
     $(document).on('click', function (e) {
     var
