--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
 	50% { opacity: 0.1; }
 	100% { opacity: 1.0; }
 }
+
+@font-face {
+font-family: 'unicons';
+src: url('../fonts/unicons.ttf') format('truetype');
+font-weight: normal;
+font-style: normal;
+}
 </style>
 
 
