--- a/Sports-and-Games.html
+++ b/Sports-and-Games.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De La Salle College Colombo 15 | Sports & Games </title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/DLSC_Logo_1x1_small.png">
