--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,14 @@
 </head>
 
 <body id="gallery">
+    <div class="loader_bg">
+        <div class="loader"></div>
+    </div>
+    <div class="progress-wrap">
+        <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+            <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+        </svg>
+    </div>
 <!-- Start Your Body Code From here -->
 <div class="wrapper">
     <!-- header starts here -->
@@ -528,6 +536,52 @@ body {
 <script src="https://use.fontawesome.com/434d359724.js"></script>
 <script src="js/imagesloaded.pkgd.js"></script>
 <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script>
+			$(document).ready(function() {
+				var progressPath = document.querySelector('.progress-wrap path');
+				var pathLength = progressPath.getTotalLength();
+
+				progressPath.style.transition = progressPath.style.WebkitTransition = 'none';
+				progressPath.style.strokeDasharray = pathLength + ' ' + pathLength;
+				progressPath.style.strokeDashoffset = pathLength;
+				progressPath.getBoundingClientRect();
+				progressPath.style.transition = progressPath.style.WebkitTransition = 'stroke-dashoffset 10ms linear';
+
+				var updateProgress = function() {
+					var scroll = $(window).scrollTop();
+					var height = $(document).height() - $(window).height();
+					var progress = pathLength - (scroll * pathLength / height);
+					progressPath.style.strokeDashoffset = progress;
+				}
+
+				updateProgress();
+				$(window).scroll(updateProgress);
+
+				var offset = 50;
+				var duration = 550;
+
+				jQuery(window).on('scroll', function() {
+					if(jQuery(this).scrollTop() > offset) {
+						jQuery('.progress-wrap').addClass('active-progress');
+					} else {
+						jQuery('.progress-wrap').removeClass('active-progress');
+					}
+				});
+
+				jQuery('.progress-wrap').on('click', function(event) {
+					event.preventDefault();
+					jQuery('html, body').animate({scrollTop: 0}, duration);
+					return false;
+				})
+			});
+		</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        setTimeout(function(){
+            $('.loader_bg').fadeToggle();
+        }, 1500);
+    </script>
 <script src="js/jquery.magnific-popup.min.js"></script>
 <script>
     $(document).ready(function () {
