--- a/Bridge-between-the-College-and-the-Old-Boys.html
+++ b/Bridge-between-the-College-and-the-Old-Boys.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/snowflakes.css">
 
     <!--Snow Flakes-->
-<div class="snowflakes" aria-hidden="true">
+<!--div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
   ❅
   </div>
@@ -51,7 +51,7 @@
   <div class="snowflake">
     ❆
   </div>
-</div>
+</div-->
 
 </head>
 
