--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--Snow Flakes-->
-<!--div class="snowflakes" aria-hidden="true">
+<div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
   ❅
   </div>
@@ -94,7 +94,7 @@
   <div class="snowflake">
     ❆
   </div>
-</div-->
+</div>
 <style>
   .css_blink {
 	-webkit-animation-name: blinker;
