--- a/about.html
+++ b/about.html
@@ -5,8 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De La Salle College Colombo 15 | About</title>
+
+    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+
     <!--Style Starts-->
-    <link rel="icon" type="image/png" href="img/DLSC_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
@@ -42,6 +48,14 @@
 </style>
 
 <body>
+    <div class="loader_bg">
+        <div class="loader"></div>
+    </div>
+    <div class="progress-wrap">
+        <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+            <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+        </svg>
+    </div>
     <!-- Start Your Body Code From here -->
     <div class="wrapper">
         <!-- header starts here -->
@@ -495,6 +509,52 @@ body {
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/434d359724.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script>
+			$(document).ready(function() {
+				var progressPath = document.querySelector('.progress-wrap path');
+				var pathLength = progressPath.getTotalLength();
+
+				progressPath.style.transition = progressPath.style.WebkitTransition = 'none';
+				progressPath.style.strokeDasharray = pathLength + ' ' + pathLength;
+				progressPath.style.strokeDashoffset = pathLength;
+				progressPath.getBoundingClientRect();
+				progressPath.style.transition = progressPath.style.WebkitTransition = 'stroke-dashoffset 10ms linear';
+
+				var updateProgress = function() {
+					var scroll = $(window).scrollTop();
+					var height = $(document).height() - $(window).height();
+					var progress = pathLength - (scroll * pathLength / height);
+					progressPath.style.strokeDashoffset = progress;
+				}
+
+				updateProgress();
+				$(window).scroll(updateProgress);
+
+				var offset = 50;
+				var duration = 550;
+
+				jQuery(window).on('scroll', function() {
+					if(jQuery(this).scrollTop() > offset) {
+						jQuery('.progress-wrap').addClass('active-progress');
+					} else {
+						jQuery('.progress-wrap').removeClass('active-progress');
+					}
+				});
+
+				jQuery('.progress-wrap').on('click', function(event) {
+					event.preventDefault();
+					jQuery('html, body').animate({scrollTop: 0}, duration);
+					return false;
+				})
+			});
+		</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        setTimeout(function(){
+            $('.loader_bg').fadeToggle();
+        }, 1500);
+    </script>
     <script>
     $(document).on('click', function (e) {
     var
