--- a/gallery.html
+++ b/gallery.html
@@ -238,11 +238,10 @@
         </nav>
     </header>
     <!-- /header -->
-        <div style="text-align: center;">
-                <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
-                    <source src="vid/wave flag animation1_1.mp4" type="video/mp4">
-                </video>
-    </div>
+    <div>
+        <img class="responsive-img" src="College Assests/Gallery Section Banner Landscape.jpg">
+</div>
+
         <section>
             <style>
 
