--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@ font-style: normal;
 				</p> </center>
                 <!--</div>-->
                 <!--<div class="col-sm-4 links">-->
-               <p>
+               <p style="text-align: center;">
                         <a href="blog.html">News</a>
                         <i class="seperator"></i>
                         <a href="announcements.html">Announcement</a>
