--- a/index.html
+++ b/index.html
@@ -1073,13 +1073,12 @@ font-style: normal;
                         <i class="seperator"></i>
                         <a href="obu.html">OBU</a>
                         <i class="seperator"></i>
-                        <a href="#" target="_blank">MOU</a>
+                        <a href="#" target="_blank">Sitemap</a>
                     	<i class="seperator"></i>
                         <a href="admissions.html">Admission</a>
                         <i class="seperator"></i>
                         <a href="#">Student</a>
-                        <i class="seperator"></i>
-                        
+
                <!-- </div>-->
                <!-- <div class="col-sm-4 footer-social">-->
                     <a href="https://www.facebook.com/DeLaSalleCollegeColombo/"><i class="fa fa-facebook" aria-hidden="true" title="Official Facebook Page"></i></a>
