--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@ font-style: normal;
     <!-- Footer -->
     <footer>
         <div class="footer-wrapper">
-            <span class="logo"><img style="border-radius: 100%"  src="img/DLSC_Logo_1x1_small.png" alt=""></span>
+            <span class="logo"><img style="border-radius: 100%"  src="college-crest.png" alt=""></span>
            <div class="row">
                 <!--<div class="col-sm-4 address">-->
 			<center>	<p>
